--- a/unterlagen/aufgaben.ipynb
+++ b/unterlagen/aufgaben.ipynb
@@ -323,9 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "b38475a9",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-26T10:16:25.772102Z",
+     "start_time": "2025-04-26T10:16:25.767505Z"
+    }
+   },
+   "source": [
+    "from nltk.stem import WordNetLemmatizer\n",
+    "help(WordNetLemmatizer.lemmatize)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -361,10 +369,7 @@
      ]
     }
    ],
-   "source": [
-    "from nltk.stem import WordNetLemmatizer\n",
-    "help(WordNetLemmatizer.lemmatize)"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
